# experimentkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: py-publish.yml
examples/: performance_analysis.ipynb  plotting.ipynb  study_setup.ipynb
examples/reporting/: report_example.py
experimentkit/: __init__.py  _config.py  environment.py  funx.py  logger_config.py  metricsreport.py  monitor.py  reporting.py  visualization.py
experimentkit/evaluation/: __init__.py  regression.py
experimentkit/generators/: time_series.py
experimentkit/study_setup/: __init__.py  project_structures.py  study_setup.py
precommit/: update_readme_version.py
tests/: __init__.py
tests/experimentkit/: test_environment.py  test_funx.py  test_metricsreport.py
tests/experimentkit/study_setup/: test_project_structures.py
