[tool.poetry]
name = "experimentkit"
version = "0.1.12"
description = "A toolkit for easily running research experiments"
authors = ["gianfa <gian.angelini@hotmail.com>"]
readme = "README.md"
packages = [{include = "experimentkit"}]

[tool.poetry.dependencies]
python = "^3.9"

jupyter = "^1.0.0"
matplotlib = "^3.5.3"
numpy = "^1.23.2"
pandas = "^1.4.4"

scikit-learn = "^1.2.1"
scipy = ">=1.3,<1.9"
seaborn = "0.12.0"
statsmodels = "^0.13.5"
latex = "^0.7.0"
scienceplots = "2.1.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
pre-commit = "^3.6.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
